# vmware-nsx

./: .gitignore  .gitreview  .pylintrc  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  TESTING.rst  bindep.txt  groups  lower-constraints.txt  project.config  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
api-ref/: rest.md
debian/: control  rules
devstack/: README.rst  localrc_nsx_v3  override-defaults  plugin.sh  settings  vmware_nsx_v
devstack/lib/: nsx_common  vmware_dvs  vmware_nsx  vmware_nsx_p  vmware_nsx_tv  vmware_nsx_tvd  vmware_nsx_v  vmware_nsx_v3
devstack/nsx_p/: controller_local.conf.sample  devstackgaterc  kvm_compute_local.conf.sample
devstack/nsx_v/: devstackgaterc
devstack/nsx_v3/: controller_local.conf  devstackgaterc  kvm_compute_local.conf.sample
devstack/tools/: admin_util.py  base_resource.py  debug.py  knife.py  nsxp_cleanup.py  nsxt_cleanup.py  nsxv3_cleanup.py  nsxv3_setup.py  nsxv3_upgrade_metadata_bb_ch.py  nsxv_cleanup.py  nsxv_edge_resources.py  nsxv_fw_autodraft_setting.py  nsxv_util.py  resources.py  testbed.json
doc/: requirements.txt
doc/source/: admin_util.rst  conf.py  devstack.rst  housekeeper.rst  index.rst  usage.rst
etc/: nsx.ini  policy.json
packaging/: README.rst
packaging/debian/: rules  (+2 more)
tools/: .zuul.yaml  check_i18n.py  i18n_cfg.py  misc-sanity-checks.sh  pretty_tox.sh  tox_install.sh  tox_install_project.sh
vmware_nsx/: __init__.py  _i18n.py  nsx_cluster.py  plugin.py  version.py
vmware_nsx_tempest/: README.rst  config.py  plugin.py
(+930 files in other folders)
